# UF-Rust-API

./: .env  Cargo.toml
db/: data.sql  uf.db
src/: main.rs
src/configuration/: db.rs
src/model/: mod.rs  prelude.rs  uf.rs
